@@ -8,12 +8,14 @@ DIST gitlab-shell-5.1.1.tar.gz 688960 SHA256 33a4b79b0b06ad935a4bcf1ad41ab88882e
 DIST gitlab-shell-5.3.1.tar.gz 708811 SHA256 989e7976c56d09d455e5e67e587426be2aca71ef2e27541c8654e74aac82f68c SHA512 00c6dde3d7a59c956396988b2f5790291c44fe134812588ab5c03e7612d49c08de2f5fd08a8b4a55a2c95a46db1d0cdb0e07469958d5c0d6c778d0f9dd279afc WHIRLPOOL 266218edb547e2e7fab95982f78d5c2a7057e061a48a854697949214791dab512f4512a57197ce1ac901dd2b97f4e363a39b8cd2ac74f5cb002ffdc38b8fd06a
 DIST gitlab-shell-5.8.0.tar.gz 718927 SHA256 7c6a02e12ec0efcca23b9200dc18be29a8ce2bf70f9802bb188fc22dbf1875d3 SHA512 f17e4ec95dce29608684de27d9a4f7a3fa69cd25fb68223576a4501ef83fc50bfb74668599672edc8c8d670585b47e22825004cba2227bb4ef6f0e3c27d06b59 WHIRLPOOL 941c5c9daf6e319e44c49af627474e87f33e964bbad0b59b84f90f7b7e8ca82b5f0635102964b9fd7b74f8101b6af6539aa966978468105ad9b004cb2fa76222
 DIST gitlab-shell-5.9.0.tar.gz 710920 SHA256 5085b531abd1c3ebbc73c7b77c05e674fe42d975c4d9c64bdc54704c51a15907 SHA512 e89a0f2b97e502b003ee62eacfa520dc248b93cf68a0d2eabae5672ee968ca68fd01839c9195422fb680e341756ec399af0a7654fc4e6fbe7d12f3af3643d2c6 WHIRLPOOL 45bd1f044314de3d093fb6689b5c50ca9243aa097e54f75e15485eda6504ab91975a5e8c4df115a94dfe228d98923ebc5f68e85eb050a95fd71f5927d5a89354
-EBUILD gitlab-shell-5.0.0.ebuild 3653 SHA256 346718615330cb98f84556a65fbac2561c14fab6ed22a42d4fa6cbcb651faa98 SHA512 390c922cc1eebd3dd7fa10e94b58a61a2d7363e19b59cffbd54be40c6fee60a894487c168b42294af5bae772d94c687dd14edf48c50c43696a52e4c8db87088c WHIRLPOOL 1278ab21caa8385e21976bed117ac1428ea2ed08576e20f58c7337ab8e8d565c4bf4742895458373878f19dfc48924f808bb4950303f48ce17af216f797f885a
-EBUILD gitlab-shell-5.0.2.ebuild 3653 SHA256 0af6f31c8d068612d618ec4d5959e06e78cd867dfb994079793fb2041803663f SHA512 65eac38adc73d5bec64bb95214a0c9599a72d51b6e4c766881b39087afc0b72b4180fad30b7ee5f46e85949a2d52956475db7b8d52976a12bae7d51681e140e1 WHIRLPOOL 8d406881dfd71e0b3b9168f3fd23766a04dfeecfdf668de9e3298a5650333c851feb6702c8f2134cfe683fd280369481cd53896ec95d1b89f4f9a92d89eb3f7b
-EBUILD gitlab-shell-5.0.4.ebuild 3653 SHA256 8e235cbe5a233e0382aadb466ee130c8b76bc3474fdfe175bf27a38d2cb975a0 SHA512 16e3a82a9705dd525fb24d3cb3981c12c2dbf3f944055570b1299cfcd67ad480c3ad69068c4347c61274003c20908bf2918a336d80c7a5148df5418fd1524d8a WHIRLPOOL edab6e46dc3af776db143be3a0009917f55fdcd01528c746bfa69b7acb0135d9880387e46653c31b5a04c60d6aee51efd7773aa2403e1cf0142d4a3e4a380835
-EBUILD gitlab-shell-5.1.1.ebuild 3888 SHA256 9e7c878a166555bdd6c14d1be5929b0363eabe4352073db46e84905937323169 SHA512 4bb335f810619f813e84a20a0861ab3e1fdff1134b829f55bd209e70fcfb43fdac96b9fe011aed1a031b6674518c8b36be13d8fb7c8f9ea9cbc3335e3f0b1edc WHIRLPOOL 0285dacb4e03ede570ed4c5d07153d0c7835e91d7dc7742064021c92ec8d2d04ffc9a6d2baf533f86edf4bd18337658a96297918e38ff6c81ee2291284e9a237
-EBUILD gitlab-shell-5.3.1.ebuild 3888 SHA256 7075b271eeee6da9a8bd9f9e5aaf9c0c9612ab2d27f8399df32628e7bde53fa2 SHA512 b7c567e262e23fdb9f6845b141aa4157d31b86ce115e305f56f30e1673dcd9cb1a4dce82f45a4139ff47008c9072cc743d76f00ab92f4d9fa869dcf4ecd26cc4 WHIRLPOOL e3efacb596afb62d21feffa26e7c2b2947a03e742a55edd1d4f60746395ab6edd636824d14f937d3e66003fdec9b168ebb80ba31a34e9ee6faf8964cca8839e7
-EBUILD gitlab-shell-5.8.0.ebuild 3907 SHA256 fe1bd700fc6964e69296160da0c75dd5193f6a999e6a985b179ddd7587a96560 SHA512 fe3e0c31daed0cdad9beeb9e45c4002b036475db53aed54a8cdfc54363452ec61ec53ada8116b6c4cfdf333678263a552541c59205fb92b47a5c882b70b0ae2a WHIRLPOOL 55a81924b0b8bc81d3e8726ac0a2422245cb83d095643e80564c4e4f81dc2ebbf11218cdf545953f304e44f1c13d1846216eabb4ad6810edcbc2dffc93692707
-EBUILD gitlab-shell-5.9.0.ebuild 3907 SHA256 ef0ff5dad7b058e19c967c4757654133499d13f3a6eb67f1d9f28edde3e554cf SHA512 485d0c228310a4a69810d2370c8c1d57caa004442c5fa3103b4f889d501091c87bd24e440f41b32d1ca5d405f8e0df14568898cfd9b1bbe0bebae388f7c1817b WHIRLPOOL 1649b36d912bc6f56eff4c6fc1d7fc035f740e80f8e467d7b8e3860d12f7b07e82b5a4c4a0cf718ab3a22ff58359f8a1d600d6f3c68e021bb06e743869105df3
-MISC ChangeLog 4802 SHA256 353b8a710e93fe3e570df73ebc982e68a2371226cabdc8ad306a5a6ce8221e5f SHA512 374bd0fb1e95c8277e23d2ba5719595df7afbbce7b5acc978d35dd6cf7780582a9e4075bcb0e4df0ef87eaaf67d2d736d0c023512a6c54e3e267f3f9417fa063 WHIRLPOOL 667835a6bc140d20cf61c9b1eec3a9c96fd99aa5d70edf769f664e73fe2146a00497c3eec9683bf27df4be2dddca2218c2c5adf0e80118bebf14dea0d35b3c37
+DIST gitlab-shell-5.9.3.tar.gz 711416 SHA256 43692b5ba3c9757ad201611b66f199a636e6d4b47c144ebfd5e8d9b9c996e127 SHA512 b58c7eac03152378bba7f965e630669b6d3628edc11e880500eca5a200d93777e164c3f31c1a241c7b5789d3cbbb19944005268c406d4371ccbe90f913be215e WHIRLPOOL 2ab0627c4ab532c6d291b8ebce6e5d34484bef8ac8cf3feee0d2c1ba2a8d7c570b6e36df1b1c6b121a49145d49b6d1a5d8a37a70ca3f8af70f3231125674a3d2
+EBUILD gitlab-shell-5.0.0.ebuild 3654 SHA256 2a3a890e9c7d9dd8af476dd0cdfe480512dacdcbbf53182bd353797c76684256 SHA512 243b7add0a8f737640d46c7c0bd8b0a6c93b1275302d1cd3cfae20cfb77116645a8b384a977ae862941cadb7200f81dc6a6eaf604372fa5a1bfa1761430627e5 WHIRLPOOL b8762ae9c23b2c1a8e322b5b22ece63eaa1421a5cfc53b067b036c61d9c59f84d4a38e4ed95f002be6d5e5c1ce8d9c88d694a8fee5abe1a0b1dda5f4751c2722
+EBUILD gitlab-shell-5.0.2.ebuild 3654 SHA256 9f06b267774f58339770844496a90a7b09af75a3354a28619af90d57e1aaf0d0 SHA512 a972f71789a11fa611d3b591bff438273e764dce6646a912d4f71c968d1f7e9d3350c9589d6b2dad00e300cf350daf1efe617751300ab866eec66a799f2f76a4 WHIRLPOOL 420f705da6d31de25ba4a19979cb2da5ea4275d020a8a6ac0c34792857b2c5f6d0fbe33c0ca7573c5084b062f12fef14b2f73b88db523521d8fffe8f492ffeee
+EBUILD gitlab-shell-5.0.4.ebuild 3654 SHA256 6227964f26e195eb914163aba910af177e9d312bccce84783673914c1b6a7341 SHA512 b383072cedf66875317ca90c3daa422e968af6d293bbe2b6efb69e4da91af2ccfc77179ccfa6aa07263ae50f603dab3efc27c36d0c8ac8169b368c9f6474fb75 WHIRLPOOL 9de88e1e7a6d2bc729dbbde54ef40b0046ba698fa1b9874a0751222572eb0d0aa2c9683bc84db44878742d5d4d039d3f96ae893af6a649f73f7c395e932934e4
+EBUILD gitlab-shell-5.1.1.ebuild 3889 SHA256 1ec35ad363ec198c9b53974f3410401b559c56814d747941888b475f19479918 SHA512 fdbc2465617043aa2dc813624e513996c7827831abed242fa9dfb2e943825cf710ba65c0d5882a312af64e154f667a82989a787b63e61d0ea8dd81fb4accf035 WHIRLPOOL 3b231de69ff373868a4acbb4df49a6120b443db20f9ab5ecda9902a6f74539b4534a400f86d8de8564fb1d86f71f02aa48e830c18486e08700bbdc2602d2083f
+EBUILD gitlab-shell-5.3.1.ebuild 3889 SHA256 be4349d3faccc8bda7ec85ad68204de0d525feef55ab9159ba293810ab4c7162 SHA512 2922c2271cb66220432ea0c79b74b2b1015cb55eed3c98845bb8ac15ca6ca2846579802bd832e9b3fa188879b613aada0bdeeca47fce29a6c7bf8d51242e7d6e WHIRLPOOL 2f0aea6989a00f07452e4097436596517bee8fab5b557f2a373d185b76eeeef40c8753e32b32d40f08070cba28e7b59ba86278bf665fa9e19260e799f44d5eb0
+EBUILD gitlab-shell-5.8.0.ebuild 3908 SHA256 6f144e30269af1f4b608258da78553f64a1c6fb4e4ad532de4adcc4d93c8962d SHA512 e9131c8d9361a7321837c996b098b515b15cbd93c15067c000a5811d313fb167432bc415a5327a110adc6a92009d52cad78f12311552042c1b214b5df3eae9ba WHIRLPOOL e16d0ea02eceea491c8bc079cd1d4932d83340f1db3a9e249960b57e550ed65903610f0541d89ef616561f83f4c7fc771b1aedd115e48b80c62e72f62d7dbc3a
+EBUILD gitlab-shell-5.9.0.ebuild 3908 SHA256 91618dfa168fff385eb362572c8e65e1f72464ea4240b03e60cb554f7c872a8d SHA512 c16e5176dcfc866a696c4b1096b17bf15437ee77db92f28de79990688f146fa38ca2d345d1b3138072626086242f6c3e044a345435ea11ebd0455c3115c8bafe WHIRLPOOL 0b3d586d6c991a20c806ca5a53437aa8eb79eabfa64a26fb839d493052ae2d752dc65ec9626c3c7f62d6de9182d31870eb99c6018f6d490a30962f0b823eccd1
+EBUILD gitlab-shell-5.9.3.ebuild 3908 SHA256 27290b4d2d5ceacaf991026c149ea2e1eaa270959490d9a8850596c8e7b4afed SHA512 daa5328dd238804860f8aa52cc4b09c484fc1477dfa6e60aa2fb424e27cc69121dea2c677e02832613ce0bc0023b9b23fe91c53dd455cbe689c6c09bb342138e WHIRLPOOL 8fa05924b1405f79656da46cfe7d22f1631a10ef19629f75fafdec11fe7b6d6fbc0db80ae2a31c81d3c11a9b412f39aa25234e7d5e318b6f4ebbd305af3f6781
+MISC ChangeLog 5227 SHA256 f658e85652f0f88a212293543397cfe83523effe85b0c431ad92f75b54f72f26 SHA512 32e49113fa8ae098a3802672084815d1c39c65bb1281e76b4a57b9d92e3391b1df2eeb3303d2d7bd9fe6e371778234f997b464a12c2172d08c0d37e9d44a7f25 WHIRLPOOL 402f06333ebfc55611726f4ce5872723770e7244eb9f63070d07b1fe6b674c9b8e5268d9264738abd0f89803d63a29599580c309d5766f74e54f6261bb000ad2
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
