@@ -1,6 +1,5 @@
 # Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Id$
 
 EAPI="6"
 
@@ -93,7 +92,7 @@ all_ruby_install() {
 	# create symlink for .gitlab_shell_secret
 	einfo "creating symlink for .gitlab_shell_secret"
 	TOKEN_FILE="${DEST_DIR}/.gitlab_shell_secret"
-	dosym /opt/gitlab/.gitlab_shell_secret "${TOKEN_FILE}"
+	dosym ../../../opt/gitlab/.gitlab_shell_secret "${TOKEN_FILE}"
 
 	# Gitaly stupidly hardcodes the path to config.yml :(
 	MY_CONF_FILE="${DEST_DIR}/config.yml"
